GNOME Bugzilla – Bug 723994
Cannot build gnome-control-center with clang when optimization is disabled
Last modified: 2014-02-11 12:04:16 UTC
Created attachment 268625 [details] [review] Add static to some inline functions declaration In panels/universal-access/zoom-options.c, there are 3 inline functions: set_active, get_active, set_sensitive. These 3 functions are declared without static or extern, and only inline definition is provided. Therefore, if the compiler decides not to inline these 3 functions, I will get undefined reference when linking the executable. These 3 functions are only used inside panels/universal-access/zoom-options.c, so I think we can solve the issue by adding static to the declaration.
Review of attachment 268625 [details] [review]: To save one line length? Seriously? Can you provide a patch that just gets rid of this non-sense instead?
Created attachment 268650 [details] [review] Remove useless inline functions
Review of attachment 268650 [details] [review]: Great, thanks
attachment 268650 [details] [review] - pushed as 1ea4b3a - universal-access: Remove useless inline functions