universal-access: Remove useless inline functions

These inline functions are just wrappers with shorter names. We do not need to
save line length.

https://bugzilla.gnome.org/show_bug.cgi?id=723994